style.css
/* body {
    background-image: url("./1cmkfZ.gif");
} */

nav.navbar {
    padding: 0 2rem;
    background: white !important;
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
    padding-bottom: .5%;
    /* position: relative; */
    z-index : 1;
}

nav.navbar:before {
    content : "";
    position: absolute;
    /* left    : 0; */
    bottom  : 0;
    height  : 5px;
    width   : 95%;
    border-bottom: .8px solid rgba(141, 141, 141, 0.5);
}

.navbar-brand {
    display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: flex-start;
	align-items: center;
	align-content: center;
    margin-right: 0;
}

.logo {
    margin: 4% 5% 0 5%;
    font-family: 'Cinzel', serif;
    color: rgb(94, 94, 94);
    /* font-weight: lighter; */
    /* letter-spacing: 5px; */
    font-size: 3rem;
    /* text-shadow: 2px 2px 4px rgb(39, 39, 39); */
    transition: text-shadow 0.3s ease-in-out;
}

.logo:hover {
    text-shadow: 4px 4px 9px rgb(0, 0, 0);
}

ul {
    margin-top: 1%;
}

.main {
    margin-left: 30%;
}

.scroll {
    font-weight: bold;
    color: rgb(87, 87, 87);
    font-family: 'Cinzel', serif;
    padding: 1%;
}

.scroll:hover {
    text-shadow: 2px 2px 4px rgba(94, 94, 94, 0.5);
    transition: text-shadow 0.2s ease-in-out;
    color: rgb(94, 94, 94) !important;
}

.dot {
    color: rgba(88, 88, 88, 0.6);
    padding: 0 2%;
}

.social i {
    color: rgb(87, 87, 87);
}

#myBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 25px;
    z-index: 99;
    /* font-size: 20px; */
    font-family: 'Playfair Display', serif;
    font-weight: bold;
    border: none;
    outline: none;
    background-image: url("./pink.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    color: white;
    animation-duration: 2s;
    animation-delay: 1s;
    animation-iteration-count: infinite;
    cursor: pointer;
    padding: 10px 15px;
    border-radius: 4px;
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
    /* border: 3px solid rgba(0, 0, 0, .6); */
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
}

#myBtn i {
    text-shadow: 3px 3px 8px #555;
    transition: text-shadow 0.2s ease-in-out;
    font-size: xx-large;
}

section {
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    width: 100%;
    margin: 0;
}

#sec1 {
    height: 100vh;
}

.headline {
    margin: 4% 0 3% 0;
    text-align: center;
    color: rgb(49, 49, 49);
    font-family: 'Cinzel', serif;
}

.pink-banner {
    padding: 0;
}

.banner {
    background-image: url("./pink.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    width: 100%;
    margin: 0;
    height: 57vh;
    width: 100%;
    display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: center;
	align-items: center;
	align-content: center;
}

.carousel {
    height: 80%;
    width: 33%;
}

.carousel-indicators li {
    width: 10px;
    height: 10px;
    border-radius: 100%;
}

.info {
    font-family: 'Cinzel', serif;
    text-align: center;
    margin-top: 2%;
    color: rgb(49, 49, 49);
}

.bullet {
    color: rgba(88, 88, 88, 0.6);
    padding: 0 2%;
}

#sec2 {
    /* background-image: url("./pink.jpg"); */
    height: 95vh;
}

.banner-sec2 {
    background-image: url("./pink.jpg");
    background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	background-attachment: fixed;
    width: 100%;
    margin: 0;
    height: 5vh;
}

.bio {
    margin: 3% 2% 0 2%;
}

.bio img {
    height: 200px;
}

.videos {
    display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-around;
	align-items: center;
    align-content: center;
    margin: 3% 0;
}

.video-theatrical {
    /* clear: both;
    margin: 2% 0 0 4%; */
    width: 38%;
    height: 80%;
}

.video {
    /* margin: 2% 4% 0 0; */
    width: 38%;
    height: 80%;
}

#sec3 {
    /* background-image: url("./green.jpg"); */
    height: 95vh;
}

.headline-sec3 {
    text-align: center;
    padding-top: 2.5%; 
    color: rgb(49, 49, 49);
    font-weight: lighter;
    font-family: 'Cinzel', serif;
}

.card-deck {
    margin: 2%;
}

.card {
    font-family: 'Bitter', serif;
    font-weight: 800;
    letter-spacing: 1px;
    /* width: 19rem;
    height: 25%; */
}

.card img {
    height: 55vh;
}

.card a {
    text-decoration: none;
    color: white;
}

.card a:hover {
    color: rgb(180, 180, 180);
}

.event-date {
    height: 70px;
    width: 70px;
    padding-top: 2.5%;
}

.card-title {
    margin-top: 15%;
}

.card-text {
    margin-bottom: 0;
    margin-top: 1%;
}

.event-btn {
    margin-top: 8%;
}

#sec4 {
    height: 100vh;
}

.footer {
    height: 50vh;
    background-color: darkslategray;
}

@media (max-width: 575.98px) {
    .container-fluid {
        margin: 0;
    }

    .navbar {
        padding: 0 1%;
    }

    .logo {
        white-space: normal;
    }

    .scroll {
        margin: 1% 0;
    }

    .social {
        display: flex;
        flex-direction: row-reverse;
        margin-bottom: 2%;
    }

    .dot {
        display: none;
    }

    #myBtn {
        visibility: hidden;
    }

    .carousel {
        height: 90%;
        width: 90%;
    }

    #sec2 {
        height: auto;
    }

    .things {
        margin: 4% 0 0 0;
        width: 100%;
        padding: 0;
    }

    .things img {
        width: 100%;
    }

    p {
        font-size: .9em;
    }

    iframe {
        width: 100%;
    }
}

@media (min-width: 1300px) {
    #title {
        font-size: 3em;
    }
    
    
}

